projetGL/src/test/deca/syntax/invalid/ourTests/test_string_without_dec.deca
// Description:
//    Main , avec un string ""
//
// Resultats:
//    error token "
//

{""}
